--- a/index.html
+++ b/index.html
@@ -82,10 +82,8 @@
     </a>
   </section>
   <section class="item item-maindish">
-    <a href="#">
-      <div class="image">
-      <img  src="images/image_S_5.jpg" alt="MAIN DISH">
-      </div>
+    <a href="#">   
+      <img class="image" src="images/image_S_5.jpg" alt="MAIN DISH">
       <div class="category">MAIN DISH</div>
       <p class="description">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
     </a>
